RESOLVED FIXED196101
storage/indexeddb/closed-cursor-private.html is crashing on debug
https://bugs.webkit.org/show_bug.cgi?id=196101
Summary storage/indexeddb/closed-cursor-private.html is crashing on debug
youenn fablet
Reported 2019-03-21 12:10:59 PDT
storage/indexeddb/closed-cursor-private.html is crashing on debug Dashboard : https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=storage%2Findexeddb%2Fclosed-cursor-private.html Crash Log : https://build.webkit.org/results/Apple%20High%20Sierra%20Debug%20WK2%20(Tests)/r243270%20(7135)/storage/indexeddb/closed-cursor-private-crash-log.txt 0 com.apple.JavaScriptCore 0x0000000127fab0f0 WTFCrash + 16 (Assertions.cpp:305) 1 com.apple.WebCore 0x00000001154157cb WTFCrashWithInfo(int, char const*, char const*, int) + 27 2 com.apple.WebCore 0x0000000116d22d89 WebCore::IDBServer::UniqueIDBDatabaseConnection::didCommitTransaction(WebCore::IDBServer::UniqueIDBDatabaseTransaction&, WebCore::IDBError const&) + 265 (UniqueIDBDatabaseConnection.cpp:184) 3 com.apple.WebCore 0x0000000116d7de36 WebCore::IDBServer::UniqueIDBDatabaseTransaction::commit()::$_24::operator()(WebCore::IDBError const&) const + 86 (UniqueIDBDatabaseTransaction.cpp:120) 4 com.apple.WebCore 0x0000000116d7dd44 WTF::Function<void (WebCore::IDBError const&)>::CallableWrapper<WebCore::IDBServer::UniqueIDBDatabaseTransaction::commit()::$_24>::call(WebCore::IDBError const&) + 52 (Function.h:102) 5 com.apple.WebCore 0x0000000116d08460 WTF::Function<void (WebCore::IDBError const&)>::operator()(WebCore::IDBError const&) const + 192 (Function.h:57) 6 com.apple.WebCore 0x0000000116d6db3d auto WebCore::IDBServer::UniqueIDBDatabase::commitTransaction(WebCore::IDBServer::UniqueIDBDatabaseTransaction&, WTF::Function<void (WebCore::IDBError const&)>)::$_18::operator()<WTF::Optional<WebCore::IDBError> >(WTF::Optional<WebCore::IDBError>) + 93 (UniqueIDBDatabase.cpp:1611)
Attachments
Patch (1.96 KB, patch)
2019-03-21 12:13 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2019-03-21 12:13:45 PDT
Alexey Proskuryakov
Comment 2 2019-03-22 09:57:27 PDT
This is a very recent regression, what caused it?
Ryan Haddad
Comment 3 2019-03-22 10:00:15 PDT
Dashboard suggests that this may have regressed with: "Include WAL and SHM file size in IDB database size computation" https://trac.webkit.org/changeset/243270/webkit
Alex Christensen
Comment 4 2019-03-22 10:05:47 PDT
Comment on attachment 365586 [details] Patch Probably moving the private indexeddb to the network process.
WebKit Commit Bot
Comment 5 2019-03-22 15:11:47 PDT
Comment on attachment 365586 [details] Patch Clearing flags on attachment: 365586 Committed r243401: <https://trac.webkit.org/changeset/243401>
WebKit Commit Bot
Comment 6 2019-03-22 15:11:48 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7 2019-03-23 17:48:20 PDT
Note You need to log in before you can comment on or make changes to this bug.